# NESO-RNG-Toolkit

./: CMakeLists.txt  LICENSE  README.md
cmake/: Config.cmake.in
examples/NESO-Particles/: CMakeLists.txt  README.md  main.cpp
include/: neso_rng_toolkit.hpp
include/neso_rng_toolkit/: create_rng.hpp  distribution.hpp  platform.hpp  rng.hpp  typedefs.hpp
scripts/formatting/: format_all.sh
src/: create_rng.cpp  neso_rng_toolkit.cpp
test/: CMakeLists.txt  main.cpp  test_platform_curand.cpp  test_platform_hiprand.cpp  test_platform_onedpl.cpp  test_platform_onemkl.cpp  test_platform_stdlib.cpp  test_utility.cpp  test_version_print.cpp
